--- a/main.css
+++ b/main.css
@@ -1,5 +1,86 @@
-.text{
-    font-size: 20px;
-    color: red;
-    
+p{
+    margin-bottom: 10px;
+}
+.header{
+    text-align: center;
+}
+.other-details{
+    display: inline-flex;
+    width: 100%;
+    justify-content: center;
+    font-size: 13px;
+    color: #7c7c7c;
+}
+
+.bottom-border{
+    border-bottom: 1px solid #b8b8b8;
+    padding: 0px 0px 15px 0;
+}
+ 
+#name{
+    font-size: 3rem;
+    font-weight: 600;
+    color: #3f3a3a;
+}
+
+#phone-number, #website, #email-id, #address, #dob{
+    padding: 0px 5px;
+}
+
+#address{
+    justify-content: center;
+    font-size: 13px;
+    color: #7c7c7c;
+}
+
+#website a{
+    color: #7c7c7c;
+}
+
+svg.bi.bi-dot{
+    margin-top:3px;
+    vertical-align: bottom;
+}
+
+.resume-section{
+    margin: 20px 0px;
+}
+
+.technologies-list{
+    font-size: 14px;
+    padding-left: 1rem;
+}
+
+.degree, .job {
+    margin-bottom: 15px;
+}
+
+.degree-details {
+    font-size: 13px;
+    display: flex;
+}
+
+.job-company-details {
+    font-size: 13px;
+    font-weight: bold;
+    display: flex;
+}
+
+.job-details{
+    font-size: 13px;
+}
+
+.job-details ul {
+    padding-left: 1rem;
+}
+
+.job-contact {
+    font-style: italic;
+}
+
+img.dp {
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    margin: 10px;
 }
